# synapse-router

./: .env.example  .gitignore  LICENSE  Makefile  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: ci.yml
docs/adr/: 0001-openai-compatible-api.md
src/synapse/: config.py  main.py
tests/unit/: test_smoke.py
