[project]
name = "synapse"
version = "0.1.0"
description = "Cost-aware LLM router with complexity-based routing across multiple backends."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Minura Samaranayake", email = "minura.samaranayake@gmail.com" }]
keywords = ["llm", "inference", "routing", "vllm", "fastapi"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3.11",
  "License :: OSI Approved :: MIT License",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "pydantic>=2.9",
  "pydantic-settings>=2.6",
  "httpx>=0.27",
  "redis>=5.2",
  "sqlalchemy[asyncio]>=2.0",
  "asyncpg>=0.30",
  "alembic>=1.14",
  "prometheus-client>=0.21",
  "opentelemetry-api>=1.28",
  "opentelemetry-sdk>=1.28",
  "opentelemetry-instrumentation-fastapi>=0.49b0",
  "structlog>=24.4",
  "tiktoken>=0.8",
  "onnxruntime>=1.20",
  "numpy>=2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "pytest-cov>=6.0",
  "ruff>=0.8",
  "mypy>=1.13",
  "types-redis",
]
bench = [
  "matplotlib>=3.9",
  "pandas>=2.2",
  "anthropic>=0.40",
  "jupyter>=1.1",
]
classifier = [
  "torch>=2.5",
  "transformers>=4.46",
  "datasets>=3.1",
  "scikit-learn>=1.5",
]

[project.scripts]
synapse = "synapse.main:run"
synapse-bench = "bench.run:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/synapse"]

[tool.ruff]
line-length = 100
target-version = "py311"
[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "ARG"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]